fix sign up link in login modal not working Add "Try Demo" link At end of guided walkthrough, get user to signup fix problem where font is too small in video editor subtitle_display delete "find random videos" feature for now

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -165,6 +165,7 @@ div.videos {
 .video_name {
   line-height: 12px;
   height: 24px;
+  margin-bottom: 0px;
   overflow: hidden;
 }
 
@@ -339,10 +340,6 @@ form.sub {
   margin: 10px 0;
 }
 
-#demo-container form.sub {
-  margin-top: 50px;
-}
-
 .modal-header, .modal-footer {
   background-color: #A3D4A3;  
 }
@@ -359,8 +356,8 @@ form.sub {
   height: 70px;
 }
 
-#benefits {
-  margin-top: 40px;
+#demo .benefits {
+  margin-top: 20px;
 }
 
 .navigation-links {
@@ -541,6 +538,18 @@ ul.social_login_buttons a {
   margin-left: 20px;
 }
 
-.call_to_action {
+.call-to-action {
   text-align: center;
+  margin-top: 50px;
+}
+
+.demo_btn {
+  margin-top: 20px;
+}
+
+.sign_up_container,
+.login_container {
+  border: solid 1px #bbb;
+  padding: 20px;
+  margin-top: 20px;
 }
